# Quanta

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: build.yml
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: BandDynamics.cpp  BandDynamics.h  BiquadFilter.cpp  BiquadFilter.h  Compressor.cpp  Compressor.h  DynamicEQ.cpp  DynamicEQ.h  EQProcessor.cpp  EQProcessor.h  Gate.cpp  Gate.h  LevelDetector.cpp  LevelDetector.h  Limiter.cpp  Limiter.h  LinearPhaseEQ.cpp  LinearPhaseEQ.h  MidSideProcessor.h  Oversampler.h  SidechainFilter.h
src/presets/: FactoryPresets.cpp  FactoryPresets.h  PresetManager.cpp  PresetManager.h
src/ui/: EQCurveDisplay.cpp  EQCurveDisplay.h  LookAndFeel.cpp  LookAndFeel.h  MeterComponent.cpp  MeterComponent.h  PresetBrowser.cpp  PresetBrowser.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
src/utils/: FFTProcessor.cpp  FFTProcessor.h  MidSideProcessor.h  Parameters.cpp  Parameters.h  PresetManager.cpp  PresetManager.h  SmoothValue.h
tests/: BiquadFilterTests.cpp  LevelDetectorTests.cpp
